# pypi-catgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW_FOR_PUBLICATION.md  pyproject.toml
src/catgen/: __init__.py
src/catgen/datasets/: __init__.py  biomedical.py  boolean_concepts.py  geometric.py  multiplexer.py  restaurant.py  snp_generators.py  structured.py
src/catgen/simulation/: __init__.py  snp.py
tests/: test_dataset_generators.py  test_restaurant_dataset.py  test_simulation.py
