[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catgen"
version = "0.1.0"
description = "Categorical data generator for ML benchmarks: SNP genetics, k-multiplexer, DNF concepts, epistasis, geometric boundaries, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "catgen contributors" }
]
keywords = [
  "SNP",
  "genetics",
  "simulation",
  "categorical data",
  "Hardy-Weinberg",
  "logistic regression",
  "high-dimensional data",
  "scrime",
  "multiplexer",
  "boolean concepts",
  "benchmark datasets",
  "epistasis",
  "DNF",
  "machine learning",
  "synthetic data",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/Italbytz/pypi-catgen"
Documentation = "https://github.com/Italbytz/pypi-catgen#readme"
Source = "https://github.com/Italbytz/pypi-catgen"
Changelog = "https://github.com/Italbytz/pypi-catgen/releases"
"Bug Tracker" = "https://github.com/Italbytz/pypi-catgen/issues"

[project.optional-dependencies]
biomedical = [
  "scikit-learn>=1.2",
]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "scikit-learn>=1.2",
  "twine>=6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
